# WebDasm

./: .gitignore  README.md
.github/workflows/: deploy.yml
core/: Cargo.toml
core/src/: decompiler.rs  disassembler.rs  emulation.rs  heuristics.rs  lib.rs  tests.rs  types.rs  utils.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  declarations.d.ts  main.tsx  store.tsx  types.ts
web/src/components/: CFGView.tsx  CpuDebugger.tsx  DisassemblyView.tsx  ErrorBoundary.tsx  HexView.tsx  LeftSidebar.tsx  MemoryMapView.tsx  MenuBar.tsx  Modal.tsx  OutputLog.tsx  OverviewBand.tsx  PopoutWindow.tsx  ScriptConsole.tsx  StatusBar.tsx  StructsView.tsx
web/src/components/modals/: AboutModal.tsx  JumpToModal.tsx  ShortcutsModal.tsx  ThemeModal.tsx
web/src/hooks/: useKeyboardShortcuts.ts  useNavigationHistory.ts  useTabManager.ts  useTheme.ts  useWasm.ts
web/src/workers/: wasm.worker.ts
