[package]
name = "webdasm"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Fantros/WebDasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
iced-x86 = "1.21.0"
goblin = "0.10.5"
